# logbox

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: collector.rs  db.rs  git.rs  main.rs  server.rs
tests/: integration.rs
