[package]
name = "logbox"
version = "0.3.0"
edition = "2021"
description = "Persist dev server logs to SQLite so AI coding agents can search and query them"
license = "MIT"
repository = "https://github.com/struct-dot-ai/logbox"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
